--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -1,6 +1,10 @@
 .container {
   border-bottom: 1px solid var(--gray-4);
   margin-bottom: var(--space-4);
+  height: 85dvh;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
 }
 
 .text {
