--- a/src/components/code/code.module.css
+++ b/src/components/code/code.module.css
@@ -51,7 +51,7 @@
   min-height: 200px;
   white-space: pre-wrap;
   background-color: #252a33;
-  color: var(--gray-12);
+  color: var(--slate-3);
   outline: none;
   border: none;
 }
