--- a/src/components/faqs/faqs.module.css
+++ b/src/components/faqs/faqs.module.css
@@ -1,7 +1,8 @@
 .container {
   position: relative;
   width: 100%;
-  padding-top: 3rem;
+  padding-top: var(--space-8);
+  border-top: 1px solid var(--gray-4);
 }
 
 .pre {
@@ -18,7 +19,7 @@
   font-family: inherit;
   display: block;
   line-height: 1.5;
-  padding: 1rem;
+  padding: var(--space-4);
   white-space: pre-wrap;
 }
 
@@ -28,7 +29,7 @@
 }
 
 .title {
-  margin-bottom: 1rem;
+  margin-bottom: var(--space-4);
   font-weight: 600;
   color: hsl(var(--gray-12));
 }
@@ -40,7 +41,7 @@
 }
 
 .list {
-  margin: 0.75rem 0 1.5rem 1rem;
+  margin: 0.75rem 0 1.5rem var(--space-4);
   list-style-type: disc;
 }
 
