--- a/src/components/analyzer/analyzer.module.css
+++ b/src/components/analyzer/analyzer.module.css
@@ -37,6 +37,11 @@
   align-items: center;
   gap: var(--space-2);
   justify-content: center;
-  padding: var(--space-8);
   grid-template-columns: 1fr auto;
+  margin-bottom: var(--space-8);
+}
+
+.form {
+  padding: var(--space-8) 0 var(--space-1);
+  margin-bottom: var(--space-8);
 }
