--- a/src/components/analyzer/analyzer.module.css
+++ b/src/components/analyzer/analyzer.module.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+@media (max-width: 639px) {
+  .container {
+    min-height: 50vh;
+  }
+}
+
 @media (min-width: 640px) {
   .container {
     padding-top: var(--space-9);
